--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <h2>Personal Income Tax Calculator</h2>
 
   <form id="taxForm">
-    <label for="income">Enter Annual Income:</label>
+    <label for="income">Enter Taxable Income:</label>
     <input type="number" id="income" name="income" required>
     <button type="submit">Calculate</button>
   </form>
