--- a/index.html
+++ b/index.html
@@ -1,33 +1,34 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Income Tax Calculator</title>
-</head>
-<body>
-  <h2>Personal Income Tax Calculator</h2>
+<form id="taxForm">
+  <label>Enter Your Annual Income:</label>
+  <input type="number" id="userIncome" required><br><br>
 
-  <form id="taxForm">
-    <label for="income">Enter Taxable Income:</label>
-    <input type="number" id="income" name="income" required>
-    <button type="submit">Calculate</button>
-  </form>
+  <label><input type="checkbox" id="spouseCheck"> Have spouse/common-law</label><br>
+  <label><input type="checkbox" id="childCheck"> Child/Children under 18 years old</label><br><br>
 
-  <p id="output"></p>
+  <div id="additionalIncome" style="display:none;">
+    <label>Enter Spouse/Child Income:</label>
+    <input type="number" id="additionalPersonIncome">
+  </div><br>
 
-  <script>
-    document.getElementById("taxForm").addEventListener("submit", function(e) {
-      e.preventDefault();
-      const income = parseFloat(document.getElementById("income").value);
+  <button type="submit">Calculate</button>
+</form>
 
-      // Simple example tax formula (change later)
-      let tax = 0;
-      if (income <= 12000) tax = 0;
-      else if (income <= 24000) tax = (income - 12000) * 0.1;
-      else tax = 1200 + (income - 24000) * 0.2;
+<script>
+  const spouseCheck = document.getElementById('spouseCheck');
+  const childCheck = document.getElementById('childCheck');
+  const additionalIncomeDiv = document.getElementById('additionalIncome');
 
-      document.getElementById("output").innerText = `Estimated Tax: $${tax.toFixed(2)}`;
-    });
-  </script>
-</body>
-</html>
+  function toggleAdditionalIncome() {
+    if (spouseCheck.checked || childCheck.checked) {
+      additionalIncomeDiv.style.display = 'block';
+    } else {
+      additionalIncomeDiv.style.display = 'none';
+      document.getElementById('additionalPersonIncome').value = '';
+    }
+  }
+
+  spouseCheck.addEventListener('change', toggleAdditionalIncome);
+  childCheck.addEventListener('change', toggleAdditionalIncome);
+
+  // Optional: your existing form submit handler here
+</script>
